tests/tests/test_SqlCache/test_SqlCache.pro
@@ -1,0 +1,3 @@
+TARGET = test_SqlCache
+include(../tests.pri)
+QT += sql
